# RS015-potapanje-brodova

./: .gitignore  Battleship.pro  Battleship.pro.user.18  Battleship.pro.user.3.2-pre1  CMakeLists.txt  README.md  ServerCommunicator.cpp  ServerCommunicator.h  battleshipgame.cpp  battleshipgame.h  button.cpp  button.h  cell.cpp  cell.h  cellboard.cpp  cellboard.h  client.cpp  config.h  images.qrc  main.cpp  player.cpp  player.h
Client/: Battleship.pro  ServerCommunicator.cpp  ServerCommunicator.h  battleshipgame.cpp  battleshipgame.h  button.cpp  cell.cpp  cell.h  cellboard.cpp  cellboard.h  images.qrc  main.cpp  player.cpp  player.h
Server/: BattleshipServer.cpp  BattleshipServer.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Helper.cpp  Helper.h  User.cpp  User.h  main.cpp
