cmake_minimum_required(VERSION 3.8)
project(Server)

set(CMAKE_CXX_STANDARD 11)

set(GENERAL_SOURCE_FILES Server/GameManager.cpp Server/GameManager.h Server/User.cpp Server/User.h Server/Game.cpp Server/Game.h Server/Helper.cpp Server/Helper.h config.h)
set(SERVER_SOURCE_FILES Server/BattleshipServer.cpp Server/BattleshipServer.h)
set(MAIN_SOURCE_FILES Server/main.cpp ${GENERAL_SOURCE_FILES} ${SERVER_SOURCE_FILES})
add_executable(WebServer ${MAIN_SOURCE_FILES})

set(CLIENT_SOURCE_FILES Client/client.cpp Client/ServerCommunicator.cpp Client/ServerCommunicator.h config.h)
add_executable(ClientTest ${CLIENT_SOURCE_FILES})

if(APPLE)
    target_include_directories(WebServer PRIVATE /usr/local/opt/openssl/include)
    target_include_directories(ClientTest PRIVATE /usr/local/opt/openssl/include)
    # target_include_directories(WebServer PRIVATE /usr/local/opt/openssl/include /usr/local/opt/cpprestsdk/include /usr/local/opt/boost/include)
endif()
target_link_libraries(WebServer cpprest crypto ssl boost_system boost_chrono)
target_link_libraries(ClientTest cpprest crypto ssl boost_system boost_chrono)
if(APPLE OR WIN32)
    target_link_libraries(WebServer boost_thread-mt)
    target_link_libraries(ClientTest boost_thread-mt)
else()
    target_link_libraries(WebServer boost_thread)
    target_link_libraries(ClientTest boost_thread)
endif()
